# intelligent_systems_astar

./: .gitignore  AStar.py  CMakeLists.txt  README.md
src/: Board.cpp  Board.h  main.cpp
